Add social home summary
